// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot #1 1`] = `
<div
  title="main"
>
  <div
    className="card"
    title="card"
  >
    <svg
      className="bg"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        media
      </title>
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M17.998 7l2.31-4h.7c.548 0 .992.445.992.993v16.014a1 1 0 0 1-.992.993H2.992A.993.993 0 0 1 2 20.007V3.993A1 1 0 0 1 2.992 3h3.006l-2.31 4h2.31l2.31-4h3.69l-2.31 4h2.31l2.31-4h3.69l-2.31 4h2.31z"
        />
      </g>
    </svg>
    <p
      title="type"
    >
      Movies
    </p>
  </div>
  <p
    className="info"
    title="typeName"
  >
    Popular Movies
  </p>
</div>
`;

exports[`match snapshot #2 1`] = `
<div
  title="main"
>
  <div
    className="card"
    title="card"
  >
    <svg
      className="bg"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        media
      </title>
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M17.998 7l2.31-4h.7c.548 0 .992.445.992.993v16.014a1 1 0 0 1-.992.993H2.992A.993.993 0 0 1 2 20.007V3.993A1 1 0 0 1 2.992 3h3.006l-2.31 4h2.31l2.31-4h3.69l-2.31 4h2.31l2.31-4h3.69l-2.31 4h2.31z"
        />
      </g>
    </svg>
    <p
      title="type"
    >
      Series
    </p>
  </div>
  <p
    className="info"
    title="typeName"
  >
    Popular Series
  </p>
</div>
`;
